# harmony-ivi-installer

./: .gitignore  DISCLAIMER.md  README.md
broker/: README.md
broker/perm-grant/: HwPermGrant.java  build.sh
broker/src/: AvatrHdbBroker$$ExternalSyntheticBackport0.java  AvatrHdbBroker.java  HdbKeySetter.java  HuaweiShellBridge.java
docs/: 01-overview.md  02-hdb-broker.md  03-pm-disable.md  04-screens-and-users.md  05-runtime-permissions.md  06-compatibility.md  README.md
ivi-installer/: CODER_NOTES.md  README.md  pyproject.toml
ivi-installer/changelog/: 0.5.0.md  2026-05-06-redesign-polish.md  2026-05-06-v0.6.0-broker-resilience.md  2026-05-06-v0.7.0-competitor-parity.md  2026-05-07-v0.10.0-bundled-adb-macos.md  2026-05-07-v0.10.1-darwin-adb-cleanup.md  2026-05-07-v0.11.0-enable-adb-tab.md  2026-05-07-v0.11.1-enable-adb-manual.md  2026-05-07-v0.11.2-screen-id-swap.md  2026-05-07-v0.12.0-disable-adb-routine.md  2026-05-07-v0.12.0-pm-disable-active-user.md  2026-05-07-v0.12.1-grant-perms-autofill.md  2026-05-07-v0.12.2-pkg-picker-multi-user.md  2026-05-07-v0.12.3-app-icon.md  2026-05-07-v0.13.0-store-tab.md  2026-05-07-v0.14.0-store-live-fdroid.md  2026-05-07-v0.14.1-filter-popup-width.md  2026-05-07-v0.14.2-store-detach-no-reparent.md  2026-05-07-v0.15.0-store-sections-sort.md  2026-05-07-v0.16.0-store-sqlite-store.md  2026-05-07-v0.16.1-drop-section-chips.md  2026-05-07-v0.8.0-appgallery-source-tab.md  2026-05-07-v0.8.0-pm-disable-default.md  2026-05-07-v0.8.10-pipeline-stable-rows.md  2026-05-07-v0.8.5-live-pipeline.md  2026-05-07-v0.8.6-screen-checkboxes.md  2026-05-07-v0.8.7-screen-tooltips.md  2026-05-07-v0.8.8-screen-card-polish.md  2026-05-07-v0.8.9-strategy-pill-relabel.md  2026-05-07-v0.9.0-bundled-adb-windows.md  2026-05-08-v0.17.0-fdroid-toggle.md  2026-05-08-v0.18.0-appgallery-live.md  2026-05-08-v0.19.0-fdroid-out-appgallery-bigger.md  2026-05-08-v0.19.1-categories-mirror-appgallery.md  2026-05-08-v0.19.2-deeper-paging.md  2026-05-08-v0.19.3-games-category.md  2026-05-08-v0.20.0-appgallery-native-order.md  2026-05-08-v0.21.0-drop-xapk.md  2026-05-08-v0.22.0-search-rewrite.md  2026-05-08-v0.22.1-search-thread-crash.md  (+10 more)
ivi-installer/ivi_installer/: __init__.py  __main__.py  adb.py  apk_meta.py  catalog.py  catalog_store.py  device_info.py  devices.py  diag.py  firmware.py  installer.py  logging_setup.py  settings.py  strategies.py  timezone.py
ivi-installer/ivi_installer/resources/: README.md  extras.json
ivi-installer/ivi_installer/sources/: __init__.py  appgallery.py  appgallery_index.py  direct.py
ivi-installer/ivi_installer/ui/: device_status.py  main_window.py  store_tab.py  theme.py  widgets.py  workers.py
ivi-installer/scripts/: build.sh  build_extras.py  make_icns.sh  trim_qt.sh
ivi-installer/tests/: conftest.py  test_adb.py  test_apk_meta.py  test_catalog.py  test_catalog_store.py  test_device_info.py  test_device_status.py  test_devices.py  test_diag.py  test_firmware.py  test_installer.py  test_main_window.py  test_sources_appgallery.py  test_sources_appgallery_index.py  test_sources_direct.py  test_sources_registry.py  test_store_tab.py  test_strategies.py  test_timezone.py  test_workers.py
